--- a/style.css
+++ b/style.css
@@ -6,31 +6,71 @@
 
 body {
     font-family: sans-serif;
-    background-color: oklch(0.21 0.034 264.665);
-    color: oklch(89.3% 0.01232 259.923);
+    background-color: oklch(80% 0.00009 271.152);
+    color: oklch(20% 0.00002 271.152);
 }
 
+/* Header */
+header {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    font-size: 30px;
+}
+
+/* Box for Control buttons */
+.controls {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
+}
+
+/* Control buttons */
+.controls button {
+    width: 120px;
+    height: 40px;
+    padding: 5px 10px;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 18px;
+    border: 1px solid oklch(80% 0.00009 271.152);
+    border-radius: 5px;
+    background-color: oklch(70% 0.00008 271.152);
+    cursor: pointer;
+    transition: background-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.controls button:hover {
+    background-color: oklch(90% 0.00009 271.152);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Main content with the grid */
 .content {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    background-color: rgb(92, 92, 92);
 }
 
 .grid-container {
+    --squares-per-side: 16; /* Default value */
     box-sizing: content-box;
     display: flex;
     flex-wrap: wrap;
+    flex: 0 0 auto;
     width: 640px;
     height: 640px;
-    border: 4px solid rgb(63, 165, 253);
+    border: 1px solid oklch(70% 0.00008 271.152);
 }
 
 .grid-square {
-  width: 40px;
-  height: 40px;
-  box-sizing: border-box;
-  border: 1px solid #686868;
-  background-color: white;
-  color: black;
+    display: flex;
+    flex: 0 0 calc(100% / var(--squares-per-side));
+    aspect-ratio: 1 / 1;
+    /* width: 40px; */
+    /* height: 40px; */
+    box-sizing: border-box;
+    /* border: 0.25px solid #686868; */
+    background-color: white;
+    color: black;
 }
